# Embed_Mono

./: .gitignore  CMakeLists.txt  README.md
csharp/: test.cs  test_entrypoint.cs
src/: main.cpp
